--- a/index.html
+++ b/index.html
@@ -1,13 +1,299 @@
 <!doctype html>
 <html lang="it">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Esercizio Giorno2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Città
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Yaounde</a></li>
+                            <li><a class="dropdown-item" href="#">Douala</a></li>
+                            <li><a class="dropdown-item" href="#">Kribi</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Altre città</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">hotel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Ristoranti</a>
+                    </li>
+
+
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Cerca posti da sogno"
+                        aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <main class="m-5">
+        <div class="card border bg-tertiary shadow-sm p-2">
+
+            <div class="card-body">
+                <h1 class="card-title fs-1 d-flex align-items-center fw-normal text-secondary">Direct237 <span
+                        class="fs-4 fw-light">-la tua agenzia di viaggi</span></h1>
+                <hr>
+                <p class="card-text fs-5 fst-italic text-secondary my-2 p-0">Scopri le destinazioni più calde del
+                    momento</p>
+                <a href="#" class="btn btn-info my-3 w-25 ">Prenota ora</a>
+            </div>
+        </div>
+        <h4 class="my-4">Città</h4>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="card border-2 border-info ">
+                        <img src="assets/img/Yaounde.jpg" class="card-img-top" alt="Yaounde">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Yaounde</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Guarda</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card border-2 border-info">
+                        <img src="assets/img/caption.jpg" class="card-img-top" alt="Douala">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Douala</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Guarda</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card border-2 border-info">
+                        <img src="assets/img/camerun_spiaggia_di_limbe.jpg" class="card-img-top" alt="Kribi">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Kribi</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Guarda</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card border-2 border-info">
+                        <img src="assets/img/38_big.jpg" class="card-img-top" alt="altre città">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Altre città..</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Guarda</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <h4 class="my-4">Hotel</h4>
+        <div class="container bg-tertiary shadow ">
+            <div class="row">
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info ">
+                        <img src="assets/img/exterior.jpg" class="card-img-top" alt="foto hilton">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Hilton Yaounde</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info">
+                        <img src="assets/img/deluxe-room-dlx.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">K Hotel Douala</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info">
+                        <span
+                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
+                        <img src="assets/img/kribi.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+
+                            <h6 class="card-title text-secondary">Hotel llomba</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info">
+                        <span
+                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
+                        <img src="assets/img/kie-village-hotel.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Kie Village Hotel</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info">
+                        <img src="assets/img/very-good-hotel-and-new.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">Hotel Zingana</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 py-2">
+                    <div class="card border-2 border-info">
+                        <span
+                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
+                        <img src="assets/img/pj-gold-hotel.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title text-secondary">PJ Gold Hotel</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Prenota</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h2 class="my-4">Località del Giorno</h2>
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-8">
+                    <img src="assets/img/Palais-de-la-Culture-Sawa.jpg" class="img-fluid rounded-start"
+                        alt="Palazzo Sawa">
+                </div>
+                <div class="col-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Palazzo Sawa</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4 class="my-4">Galleria foto</h4>
+        <div class="container">
+            <div class="row g-2">
+                <div class="col-2"><img class="img-fluid rounded" src="assets/img/cameroon.jpg" alt="paesaggi camerun">
+                </div>
+                <div class="col-2"><img class="img-fluid rounded" src="assets/img/camerun.jpg" alt="paesaggi camerun">
+                </div>
+                <div class="col-2"><img class="img-fluid rounded"
+                        src="assets/img/museo-castiglioni-Matakam-paleonecritici-nord-Cameroun-007-1.jpg"
+                        alt="paesaggi camerun"></div>
+                <div class="col-2"><img class="img-fluid rounded" src="assets/img/unnamed.jpg" alt="paesaggi camerun">
+                </div>
+                <div class="col-2"><img class="img-fluid rounded" src="assets/img/Danse_sawa6.jpg"
+                        alt="paesaggi camerun"></div>
+                <div class="col-2"><img class="img-fluid rounded" src="assets/img/Reunification-monument..jpg"
+                        alt="paesaggi camerun"></div>
+            </div>
+        </div>
+
+        <h4 class="my-4 text-center">Dicono di noi</h4>
+
+        <div class="card mb-3 border-0">
+            <div class="row g-0">
+                <div class="col-md-1">
+                    <img class="rounded-circle w-100" src="assets/img/Whatsapp.senza.immagine.2019.1400x840.jpg"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body pt-1">
+                        <h6>Username</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos
+                            deleniti voluptate asperiores minus voluptatum consectetur, consequatur minima veniam nobis
+                            at! Velit veritatis, fugiat distinctio placeat quasi quae laborum culpa?</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3 border-0">
+            <div class="row g-0">
+                <div class="col-md-1">
+                    <img class="rounded-circle w-100" src="assets/img/Whatsapp.senza.immagine.2019.1400x840.jpg"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body pt-1">
+                        <h6>Username</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos
+                            deleniti voluptate asperiores minus voluptatum consectetur, consequatur minima veniam nobis
+                            at! Velit veritatis, fugiat distinctio placeat quasi quae laborum culpa?</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3 border-0">
+            <div class="row g-0">
+                <div class="col-md-1">
+                    <img class="rounded-circle w-100" src="assets/img/Whatsapp.senza.immagine.2019.1400x840.jpg"
+                        class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body pt-1">
+                        <h6>Username</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos
+                            deleniti voluptate asperiores minus voluptatum consectetur, consequatur minima veniam nobis
+                            at! Velit veritatis, fugiat distinctio placeat quasi quae laborum culpa?</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+
+
 </html>
