--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand w-25 " href="#"><img class="w-25" src="assets/img/Screenshot_2023-01-17-19-54-53-389-edit_com.facebook.katana_20240716_132454_0000.jpg" alt=""></a>
+            <a class="navbar-brand w-25 " href="#"><img class="w-25"
+                    src="assets/img/Screenshot_2023-01-17-19-54-53-389-edit_com.facebook.katana_20240716_132454_0000.jpg"
+                    alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -75,8 +77,8 @@
                         <img src="assets/img/Yaounde.jpg" class="card-img-top" alt="Yaounde">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Yaounde</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Guarda</a>
                         </div>
                     </div>
@@ -86,8 +88,8 @@
                         <img src="assets/img/caption.jpg" class="card-img-top" alt="Douala">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Douala</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Guarda</a>
                         </div>
                     </div>
@@ -97,8 +99,8 @@
                         <img src="assets/img/camerun_spiaggia_di_limbe.jpg" class="card-img-top" alt="Kribi">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Kribi</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Guarda</a>
                         </div>
                     </div>
@@ -108,8 +110,8 @@
                         <img src="assets/img/38_big.jpg" class="card-img-top" alt="altre città">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Altre città..</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Guarda</a>
                         </div>
                     </div>
@@ -125,8 +127,8 @@
                         <img src="assets/img/exterior.jpg" class="card-img-top" alt="foto hilton">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Hilton Yaounde</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -136,8 +138,8 @@
                         <img src="assets/img/deluxe-room-dlx.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">K Hotel Douala</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -150,8 +152,8 @@
                         <div class="card-body">
 
                             <h6 class="card-title text-secondary">Hotel llomba</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -163,8 +165,8 @@
                         <img src="assets/img/kie-village-hotel.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Kie Village Hotel</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -174,8 +176,8 @@
                         <img src="assets/img/very-good-hotel-and-new.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Hotel Zingana</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -187,8 +189,8 @@
                         <img src="assets/img/pj-gold-hotel.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">PJ Gold Hotel</h6>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                                voluptas.</p>
                             <a href="#" class="btn btn-primary">Prenota</a>
                         </div>
                     </div>
@@ -205,8 +207,8 @@
                 <div class="col-4">
                     <div class="card-body">
                         <h5 class="card-title">Palazzo Sawa</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque at ab
+                            voluptas.</p>
                         <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
