--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand w-25 " href="#"><img class="w-25"
+            <a style="width: 5%;" class="navbar-brand" href="#"><img class=" w-100"
                     src="assets/img/Screenshot_2023-01-17-19-54-53-389-edit_com.facebook.katana_20240716_132454_0000.jpg"
                     alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -66,7 +66,7 @@
                 <hr>
                 <p class="card-text fs-5 fst-italic text-secondary my-2 p-0">Scopri le destinazioni più calde del
                     momento</p>
-                <a href="#" class="btn btn-info my-3 w-25 ">Prenota ora</a>
+                <a href="#" class="btn btn-info my-3">Prenota ora</a>
             </div>
         </div>
         <h4 class="my-4">Città</h4>
@@ -144,10 +144,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 py-2">
-                    <div class="card border-2 border-info">
+                <div class="col-4 py-2 ">
+                    <div class="card border-2 border-info position-relative">
                         <span
-                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
+                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 ">new</span>
                         <img src="assets/img/kribi.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
 
