--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             </div>
         </div>
         <h4 class="my-4">Hotel</h4>
-        <div class="container bg-tertiary shadow ">
+        <div class="container ">
             <div class="row">
                 <div class="col-4 py-2">
-                    <div class="card border-2 border-info ">
+                    <div class="card border-2 border-info shadow-lg">
                         <img src="assets/img/exterior.jpg" class="card-img-top" alt="foto hilton">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Hilton Yaounde</h6>
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="col-4 py-2">
-                    <div class="card border-2 border-info">
+                    <div class="card border-2 border-info shadow-lg">
                         <img src="assets/img/deluxe-room-dlx.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">K Hotel Douala</h6>
@@ -145,9 +145,9 @@
                     </div>
                 </div>
                 <div class="col-4 py-2 ">
-                    <div class="card border-2 border-info position-relative">
+                    <div class="card border-2 border-info shadow-lg">
                         <span
-                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 ">new</span>
+                            class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
                         <img src="assets/img/kribi.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
 
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="col-4 py-2">
-                    <div class="card border-2 border-info">
+                    <div class="card border-2 border-info shadow-lg">
                         <span
                             class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
                         <img src="assets/img/kie-village-hotel.jpg" class="card-img-top" alt="...">
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="col-4 py-2">
-                    <div class="card border-2 border-info">
+                    <div class="card border-2 border-info shadow-lg">
                         <img src="assets/img/very-good-hotel-and-new.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h6 class="card-title text-secondary">Hotel Zingana</h6>
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="col-4 py-2">
-                    <div class="card border-2 border-info">
+                    <div class="card border-2 border-info shadow-lg">
                         <span
                             class="badge text-bg-danger w-10 position-absolute top-0 start-100 translate-middle ">new</span>
                         <img src="assets/img/pj-gold-hotel.jpg" class="card-img-top" alt="...">
